# uibk_parallelization_24

./: .gitignore  build.sh  halpings.md  job.sh  job_parallel.sh  job_parallel_debug.sh  output_parallel_error.txt  output_step150.h5  output_step226.h5  output_step302.h5  output_step378.h5  output_step454.h5  output_step72.h5  parallel_run.sh  run.sh  run_parallel.sh
assignments/02/: job.sh  mandelbrot_mpi.cpp  readmethiemo.md  results.csv  run.sh
code_parallel/apps/: main_full_code_parallel.cpp
code_parallel/include/solver/: finite_volume_solver.hpp
code_parallel/src/setup/: grid.cpp  grid1D.cpp  mpi_handler.cpp
code_parallel/src/solver/: finite_volume_solver.cpp
code_students/: CMakeLists.txt
code_students/apps/: CMakeLists.txt  main_full_code.cpp  main_full_code_parallel.cpp
code_students/include/IO/: data_storage_parallel.hpp
code_students/scripts/: ShowDataPlane.py
code_students/src/IO/: CMakeLists.txt
code_students/src/setup/: CMakeLists.txt  mpi_handler.cpp  physics.cpp
code_students/src/solver/: CMakeLists.txt  Riemann_solver_HLL.cpp  finite_volume_solver.cpp  limiter.cpp  time_integrator.cpp
code_students/tests/: test_physics.cpp
